src/main/java/syntactic/test/failing/attWithoutSemicolon.ru
struct Test {
    Int a
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 3 | 1 | Se esperaba [SEMICOLON] pero se encontró CLOSE_CURLY: } |